app/base/client-sample-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-sample
  name: client-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-sample
  template:
    metadata:
      labels:
        app: client-sample
    spec:
      containers:
        - image: 658721656416.dkr.ecr.ap-southeast-1.amazonaws.com/nodejs-tutorialspoint-peerasilp:latest
          name: client-sample
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: ecrdockersecret
