app/base/client-sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.devopscons.com #it will be dev-app.devopscons.com
    http:
        paths:
        - backend:
            service: 
             name: web
             port: 
              number: 80
          pathType: ImplementationSpecific
